--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -47,22 +47,25 @@ en: &DEFAULT_EN
         year: "2011-2013"
         desc: "Kao mali obiteljski obrt, započeli smo sa radom kod prijatelja i obitelji. Pri tome radu stekli smo kvalitetno iskustvo koje nam je pomoglo u daljnjem razvoju."
         image: assets/img/timeline/1.jpg
-        alt:
+        alt: Klimatizacijski udeđaj
+
       - title: "Rast i razvoj obrta"
         year: "2013-2018"
         desc: "Konstantan i kvalitetan rad rezultirao je povećanjem broja klijenata, te samim time i povećanjem obujma posla. U ovom periodu smo se specijalizirali za klimatizacijske uređaje i elektroinstalacije."
         image: assets/img/timeline/2.jpg
-        alt:
+        alt: Klimatizacijski udeđaj
+
       - title: "Pomoć pri izgradnji Pelješkog mosta"
         year: "2018-2022"
         desc: "Naš obrt dobija priliku sudjelovati u izgradnji Pelješkog mosta ugradnjom klimatizacijskih uređaja u svim boravišnim prostorima."
         image: assets/img/timeline/3.jpg
         alt: Instalacija klime na Pelješkom mostu
+
       - title: "Osnivanje Brnas Ploče d.o.o."
         year: "2024"
         desc: "Zbog povećanog obujma posla osnovali smo firmu Brnas Ploče d.o.o. koja će se baviti prodajom, postavljanjem i servisiranjem klimatizacijskih uređaja, elektroinstalacija i grijanja."
         image: assets/img/timeline/4.jpg
-        alt:
+        alt: Kombi vozilo s logom Brnas Ploče d.o.o.
         # you can enforce the alignment
         align: right
     end: "Pridružite <br> se našoj <br> priči!"
@@ -90,6 +93,7 @@ en: &DEFAULT_EN
       - name: "Alen Brnas"
         role: "Osnivač"
         image: assets/img/team/500x500.jpg
+        alt: Alen Brnas
         social:
 
   contact:
