--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -47,19 +47,19 @@ en: &DEFAULT_EN
         year: "2011-2013"
         desc: "Kao mali obiteljski obrt, započeli smo sa radom kod prijatelja i obitelji. Pri tome radu stekli smo kvalitetno iskustvo koje nam je pomoglo u daljnjem razvoju."
         image: assets/img/timeline/1.jpg
-        alt: Klimatizacijski udeđaj
+        alt: Klimatizacijski uređaj na zidu kuće u dnevnoj sobi 200x200, ukljućujući instalacije.
 
       - title: "Rast i razvoj obrta"
         year: "2013-2018"
         desc: "Konstantan i kvalitetan rad rezultirao je povećanjem broja klijenata, te samim time i povećanjem obujma posla. U ovom periodu smo se specijalizirali za klimatizacijske uređaje i elektroinstalacije."
         image: assets/img/timeline/2.jpg
-        alt: Klimatizacijski udeđaj
+        alt: Klimatizacijski uređaj na zidu kuće u spavaćoj sobi 200x200, ukljućujući instalaciju i servisiranje.
 
       - title: "Pomoć pri izgradnji Pelješkog mosta"
         year: "2018-2022"
         desc: "Naš obrt dobija priliku sudjelovati u izgradnji Pelješkog mosta ugradnjom klimatizacijskih uređaja u svim boravišnim prostorima."
         image: assets/img/timeline/3.jpg
-        alt: Instalacija klime na Pelješkom mostu
+        alt: Instalacija klime na Pelješkom mostu na boravišnoj jedinici.
 
       - title: "Osnivanje Brnas Ploče d.o.o."
         year: "2024"
