Allow horizontal scrolling

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -79,7 +79,7 @@ en: &DEFAULT_EN
   clients:
     section: clients
     max-height: 100px
-    horizontal-scrolling: "" #"yes/no"
+    horizontal-scrolling: "yes" #"yes/no"
     list:
       - title: Pelješki most
         url: https://crbc-croatia.com/
