--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 #theme: jekyll-agency
 remote_theme: raviriley/agency-jekyll-theme
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "https://brnasploce.com" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
 title      : Brnas Ploče d.o.o.
@@ -22,8 +22,8 @@ email      : brnasploce@gmail.com #this is also the email contact forms will go 
 description: "Brnas Ploče d.o.o. - Usluge klimatizacije, grijanja i elektroinstalacija."
 author     : Alen Brnas
 # logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+#   path: favicon.ico #path to logo image
+#   height: 60 #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
